[tool.poetry]
name = "graph-diffusers"
version = "0.0.0"
description = "Diffusion operators for graph machine learning based on GraphBLAS"
authors = ["Aaron Zolnai-Lucas <azolnailucas@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",    
    "Programming Language :: Python :: 3.12"    

]
urls = { Homepage = "https://github.com/aaronzo/graph-diffusers" }

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[[tool.poetry.source]]
name = "pyg-cpu"
url = "https://data.pyg.org/whl/torch-2.3.0+cpu.html"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
python-graphblas = "*"
pytorch = { version = "*", optional = true }
torch-sparse = { version = "*", optional = true }

[tool.poetry.extras]
torch = ["pytorch", "torch-sparse"]

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
pytest = "*"
torch = { version = "~2.3.0", source = "pytorch-cpu" }
torch-sparse = { version = "*", source = "pyg-cpu"}
torch-scatter = { version = "*", source = "pyg-cpu"}

[tool.mypy]
ignore_missing_imports = true
strict = true
disallow_subclassing_any = false
disallow_any_generics = false

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

